<resources>
    <string name="app_name">BlogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_singin">Sing In</string>
    <string name="button_not_have_an_acount_sing_up">Not have an acount? Sing Up</string>
    <string name="user_name">User Name</string>
    <string name="button_singUp">Sing Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_camera">Add Picture</string>
    <string name="navigation_menu_profile">Profile</string>
    <string name="button_create_profile">Create profile</string>
    <string name="aun_no_se_creo_ningun_post">Aún no se creo ningun post, crea el primero con la opción add photo</string>
</resources>